src/app/app.module.css
/* Your styles goes here. */
.formContainer{
    display: flex;
    column-gap: 1rem;
    justify-content: flex-start;
   
    width: 50%;
   
    
}
.formKeyword{
    background-color: white;
    border-radius: 15px;
    padding: 1rem;
    width: 100%;
   
}
.main_page_nav_container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem; 
}
.mobileViewHomeWrapperButtons{
    display: flex;
    column-gap: 24px;
    justify-content: center;
    
   
}
.modalForm{ 
    display: none;
  
}
.buttonFix{
    display: none;
}
.mobileButtonHiddenOnMediaSmall{
    display: none;
}
.mobileViewHomeWrapper{
    display: none;
}
.switchContainerMobile{
    display: none;
}
.latestWrapper{
    display: none ;
}
.mainTitle{
    font-size: 24px;
    font-weight: bold;
    font-family: 'IBM Plex Mono';
    
    
}
.divider24{

    height: 24px;
    width: 100%;
}
@media screen and (max-width: 600px) {
    .modalForm{
        display: flex;
        flex-direction: column;
        position: absolute;
        background-color: white ;
        position: absolute;
        height: 95svh;
        width: 100vw;
        top: 4%;
     
    }
    .modalAbsolutContainer{
        position: relative;
        padding: 1rem;
        display: flex;
        flex-direction: column;
        align-items: center;
       
    }
    
        
    .buttonFix{
        display: block;
        border-radius: 5px;
        bottom: 1rem;
        height: 3rem;
  
        
        width: 360px;
        border: none;
        color: white;
        background-color: green;
        
    }
    .mobileTitleContainer{
        display: flex;
        padding: 1rem;
        
        justify-content: space-between;
       
    }
    .mobileViewHomeWrapper{
        display: block;
        padding: 24px;
     

    }
    .switchContainerMobile{
        display: flex;
        justify-content: space-between;
        align-items: center ;
        padding: 1rem;

        width: 360px;
    }
    .buttonFixBlue{
        display: block;
        border-radius: 5px;
        bottom: 1rem;
        height: 3rem;
 
     
        width: 360px;
        border: none;
        color: white;
        background-color: blue;
        
    }
    .latestWrapper{
        display: flex;
        flex-direction: column;
        padding: 1rem;
        
        border-radius: 5px;
        margin-inline: auto;
        background-color: white;
        
    }
}

